[package]
name = "mathkimchi-github-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
serde = "1.0"
serde_json = "1.0"
gloo-console = "0.3"
gloo = "0.11"
